added two fields and custom delete

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>word puzz</h1>
     <form class="" action="index.html" id="formSubmit">
       <input type="text" class="form-control" id="stringInput"  placeholder="put my string in here">
+      <input type="text" class="form-control" id="letterInput"  placeholder="put my letters I want to remove in here">
       <button type="submit">submit string</button>
     </form>
     <ul id="outputList">
