added display for all items

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
       <input type="text" class="form-control" id="letterInput"  placeholder="put my letters I want to remove in here">
       <button type="submit">submit string</button>
     </form>
-    <ul id="outputList">
+    <div id="inputStringHere">
 
-    </ul>
+    </div>
+    <div id="removeLetters">
+
+    </div>
+    <div id="deletedStringHere">
+
+    </div>
   </body>
 </html>
